--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,63 +1,60 @@
-nav {
-    display: flex;
-    align-items: center;
-    background-color: #fcfdfe;
+.navbar {
+    background-image: linear-gradient(rgb(245, 245, 187), rgb(200, 247, 200));
     position: absolute;
     width: 100%;
     height: 40px;
     left: 0px;
     top: 0px;
-    min-width: 1800px;
-    box-shadow:  rgb(81, 80, 80) 0px 2px 8px -1px;
+    /* margin-top: -90px;
+    margin-left: 0px; */
+    box-shadow: 0 2px 8px 10px rgb(81, 80, 80, 0.2);
+    /* display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row; */
 }
 
-/* .container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    align-content: center;
-    justify-content: space-around;
-  } */
-
-.feedback, .reports, .franchise {
+.menu-items {
+    list-style: none;
     display: flex;
-    margin: 0;
-    margin-right: 20px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 15px;
-    font-weight: bold;
+    justify-content: space-between;
+    flex-direction: row;
+    position: absolute;
     color: cadetblue;
-}
-
-.facebook {
-    position: absolute;
-    margin-right: 20px;
-    margin: 0;
-    width: 20px;
-    height: 20px;
-    left: 1550px;
-    
-}
-
-.instagram {
-    position: absolute;
-    margin-right: 20px;
-    width: 30px;
+    align-items: center;
+    width: 250px;
     height: 30px;
+    text-shadow: 5px 5px 10px cadetblue;
+    cursor: pointer;
+    font-size: 0.9rem;
+    font-family: 'Josefin Sans', sans-serif;
+    transition: color .3s;
+    padding: 4px;
+}
+
+.feedback:hover, .reports:hover, .franchise:hover {
+    color: #88aa;
+}
+
+.social-icons {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    position: absolute;
+    color: #777;
+    align-items: center;
+    height: 1rem;
     left: 1600px;
+    cursor: pointer;
+    transition: transform 1s; 
 }
 
-.twitter {
-    position: absolute;
-    margin-right: 20px;
-    width: 30px;
-    height: 30px;
-    left: 1650px;
+.icon {
+    margin-right: 10px;
 }
 
-.pinterest {
-    position: absolute;
-    margin-right: 20px;
-    width: 40px;
-    height: 40px;
-    left: 1700px;
+.icon:hover {
+    transform: scale(1.2,1.2);
 }
