--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 body {
   /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,8 +10,6 @@ body {
   /* -moz-osx-font-smoothing: grayscale; */
   background-color: rgb(249, 249, 249);
   padding: 80px 0px;
-  background-image: linear-gradient(rgba(93, 93, 93, 0.73), rgba(93, 93, 93, 0.73)),
-  url("./images/background-icon.png");
   background-size: cover;
 }
 
